--- a/BCSHotels/Views/Home/Index.cshtml
+++ b/BCSHotels/Views/Home/Index.cshtml
@@ -30,6 +30,7 @@
 				<div class="caption">
 					<h3>@hotel.Name</h3>
 					<p>@hotel.Description</p>
+					<p>Price: @hotel.Price Rating: @hotel.Rating</p>
 					<p><a href="@Url.Action("Details", new { id = hotel.Id })" class="btn btn-primary" role="button">Book Now</a></p>
 				</div>
 			</div>
