--- a/BCSHotels/Views/Home/List.cshtml
+++ b/BCSHotels/Views/Home/List.cshtml
@@ -40,7 +40,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Rating)
         </td>
-        <td>
+        <td class="text-hide">
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
