--- a/BCSHotels/Views/Home/Index.cshtml
+++ b/BCSHotels/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using PagedList.Mvc;
-@model PagedList.IPagedList<BCSHotelsDomain.Entities.Hotel>
+﻿@model PagedList.IPagedList<BCSHotelsDomain.Entities.Hotel>
+@using System.Security.Policy
+@using PagedList.Mvc;
 
 @{
 	ViewBag.Title = "Home Page";
@@ -22,19 +23,26 @@
 	</div>
 </div>
 <div class="row">
-	@foreach (var hotel in Model)
+	@if (Model.Any())
 	{
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				<img src="@hotel.Images.FirstOrDefault().Path" alt="@hotel.Images.FirstOrDefault().Name">
-				<div class="caption">
-					<h3>@hotel.Name</h3>
-					<p>@hotel.Description</p>
-					<p>Price: @hotel.Price Rating: @hotel.Rating</p>
-					<p><a href="@Url.Action("Details", new { id = hotel.Id })" class="btn btn-primary" role="button">Book Now</a></p>
+		foreach (var hotel in Model)
+		{
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img src="@hotel.Images.FirstOrDefault().Path" alt="@hotel.Images.FirstOrDefault().Name">
+					<div class="caption">
+						<h3>@hotel.Name</h3>
+						<p>@hotel.Description</p>
+						<p>Price: @hotel.Price Rating: @hotel.Rating</p>
+						<p><a href="@Url.Action("Details", new {id = hotel.Id})" class="btn btn-primary" role="button">Book Now</a></p>
+					</div>
 				</div>
 			</div>
-		</div>
+		}
+	}
+	else
+	{
+		<p>No hotels found.</p>
 	}
 </div>
 
